Remove Claude session and message management
- Deleted Claude session and message domain models, API DTOs, and services.
- Removed Pinia store for Claude session handling and transcript management in the UI.
- Deleted `ClaudeComposer` and `ClaudeMessageBubble` components and associated unit tests.
- Cleaned up Claude-related logic, database structures, and session management from the codebase.